--- a/outline.Rmd
+++ b/outline.Rmd
@@ -103,7 +103,7 @@ knitr::include_graphics("imagesForRmd/BruceSignificPvalueDefintn.png")
 
 We're going to go back and forth between bare-bones examples and arguments from the wild, giving you more and more tools to deal with the real-world ones.
 
-A 9 min [intro video on youtube](https://www.youtube.com/watch?v=NKEhdsnKKHs)
+A 9 min [intro video on youtube](https://www.youtube.com/watch?v=NKEhdsnKKHs), but it uses different terminology than we use in this unit.
 
 * We need to know good reasons for believing things. Ideally,
   * Assumptions are true
@@ -152,15 +152,18 @@ Weeks 12 and 13
 
 <!-- * Mindset again - System 1 vs. System 2 [reading](https://www.apa.org/monitor/2012/02/conclusions) -->
 
-* Informal fallacies
+* Analysing the Molly and Bea argument
+
+* Rhetoric, mere rhetoric, and informal fallacies
 * Post hoc ergo propter hoc, again
   * [Video](https://www.youtube.com/watch?v=5A7hSaoRv0g) combining this fallacy with deductive and inductive logic. Good way to bring previous bits of the class together!
 
+* Ad populum
 * Ad hominem "To the person": 
   * Puerile name-calling <!--Include a Gilbert tweet -->
-  * Questioning the motive <!-- Gilbert tweet -->
+<!--  * Questioning the motive , Gilbert tweet 
   * Hypocrite (including [whataboutism](https://en.wikipedia.org/wiki/Whataboutism))
-  * You’re not entitled to speak on that
+  * You’re not entitled to speak on that -->
   * Appeal to authority
     * Appropriate versus inappropriate
 * Straw man
@@ -171,8 +174,6 @@ Weeks 12 and 13
   * Overwhelming exception
   * No True Scotsman
 * Slippery slope
-
-* Analysing the Molly and Bea argument
 
   * Hawthorne and Expectancy effects  <!--slides 181 to 191-->
     * Experimenter
