--- a/Vocab_ReadingsATHKArgumentsThinking.Rmd
+++ b/Vocab_ReadingsATHKArgumentsThinking.Rmd
@@ -20,9 +20,9 @@ Week 13 tutorial: Fallacies and
 
 ## Important terminological note
 
-Philosophers typically use "valid" and "sound" for describing deductive arguments, in this class we instead use the terms "suppositionally inescapable" and "inescapable" because they are easier to understand. On quizzes and tests, you will only be tested on these terms.
+Philosophers typically use "valid" and "sound" for describing deductive arguments, in this class we instead use the terms "suppositionally inescapable" and "inescapable" because they are easier to understand. On all assessments, you will only be tested on these terms.
 
-Philosophers typically use "strong" and "cogent" for describing *inductive* arguments, but in this class we use the terms "suppositionally solid" and "solid" because they are easier to understand. On quizzes and tests, you will only be tested on these terms.
+Philosophers typically use "strong" and "cogent" for describing *inductive* arguments, but in this class we use the terms "suppositionally solid" and "solid" because they are easier to understand. On all assessments, you will only be tested on these terms.
 
 ## Important Readings
 
@@ -69,8 +69,7 @@ Quiz yourself with this webpage that doesn't show the definition, and subsequent
 # Vocabulary
 
 * Confound, confounding factor, or confound variable <!-- Bruce: "Confounding factor is one that varies with both variables being considered and thus obscures their true relationship". Alex: In an experiment, a confound is something that is different for the different levels of the independent variable. Because it may affect the outcome variable, we don't know whether it is the confound or the independent variable causing any difference in the outcome variable. -->
-
-One that varies with the variable whose effect one is interested in and thus obscures their true relationship
+    * Something that varies with the variable whose effect one is interested in and thus obscures their true relationship
 
 * Enthymeme  <!-- From Greek "in-mind", because the full argument in the mind is not stated. Usually a condensed syllogism where one premise is not explicitly stated.
 E.g., "Socrates is mortal because he's human." instead of the usual 
