--- a/Vocab_ReadingsATHKArgumentsThinking.Rmd
+++ b/Vocab_ReadingsATHKArgumentsThinking.Rmd
@@ -123,7 +123,7 @@ Therefore, Socrates is mortal."
 * Moving the goalposts
 * [No true Scotsman](https://en.wikipedia.org/wiki/No_true_Scotsman)
 <!-- No true Scotsman. An "ad hoc rescue" of a refuted generalization attempt-->
-* [Overwhelming exception](https://en.wikipedia.org/wiki/Overwhelming_exception) Ali G [example](https://www.youtube.com/watch?v=SZ6k8tddDxg#t=02m01s)
+* [Overwhelming exception](https://en.wikipedia.org/wiki/Overwhelming_exception) Patrick Stewart [example](https://www.youtube.com/watch?v=ptfmAY6M6aA)
 * Confirmation bias
 * Soldier mind 
 * My-side bias
