--- a/Vocab_ReadingsATHKstatsAndStudies.Rmd
+++ b/Vocab_ReadingsATHKstatsAndStudies.Rmd
@@ -4,7 +4,7 @@ date: "This document may be updated as the lectures proceed."
 output: html_document
 ---
 
-For some of the words on this page (those that are double-underlined), a short definition will pop up if you hover over the word with your mouse pointer. Here's an example:  <abbr title="Alex is a middle-aged man who is lecturing from weeks 7 to 13.">Alex</abbr>
+For the words on this page that are underlined with tiny dots, a short definition will pop up if you hover over the word with your mouse pointer. Here's an example:  <abbr title="Alex is a middle-aged man who is lecturing from weeks 7 to 13.">Alex</abbr>. To study, first ask yourself on what the word means, and then check whether you're right by hovering over the word.
 
 ## Important Readings
 
@@ -69,29 +69,28 @@ show(h)
  Squaring r gives the proportion of variance explained by the line. "Shared variance" is a synonym.-->
 
 ### Variables
-* IV, DV <!-- Independent variable, dependent variable. -->
+* <abbr title="Independent variable. A variable manipulated in an experiment.">IV</abbr>, <abbr title="Dependent variable. A measured (not manipulated variable)">DV</abbr>
+
+<!-- Independent variable, dependent variable. -->
 * Explanatory variable
-* Extraneous variable
+* <abbr title="Refers to a variable that was not included in an analysis but might be important.">Extraneous variable</abbr> 
 <!-- When one compares two groups, one is seeking to determine the effect of an explanatory variable or variables. But extraneous variables are variables that also differ between the two groups. They may be confounds. -->
-* Confound or confounding variables
+* <abbr title="When one compares two groups, ideally only one thing (the independent variable, if an experiment) differs. A confound is something else that differs which might be the cause of the difference.">Confound or confounding variables</abbr> 
 <!-- Confounds are sometimes known as omitted variables in the context of observational studies or in the context of a statistical model like a regression. In experiment design, you might be interested in the effect of videogames on agression. You recruit a group of videogamers and another group of non-gamers and assess their agression level (somehow). You find that the videogamers are more agressive. Does this mean that videogaming causes agression? No, because you might have a confounding variable like age. Videogamers tend to be younger so your videogaming group may be younger than your non-gaming group. And, aggression levels decrease with age (and this was true even before videogames was invented), meaning that perhaps the only reason gamers are more violent is because they are younger. 
 http://www.statisticshowto.com/design-of-experiments/confounding-variable/
 -->
 * [Nuisance variable](https://dictionary.apa.org/nuisance-variable) or noise variable versus confound
-* Omitted variable
-<!-- This term is used in the context of observational studies, where Bruce used it to refer to a problematic variable that in an experimental study would be referred to as
-a "confound"-->
-* "Controlling for" a variable 
+* <abbr title="Used in the context of observational studies, Bruce used it to refer to a problematic variable that in an experimental study would be referred to as a 'confound'">Omitted variable</abbr>
 
+* <abbr title="Using statistics to try to 'subtract out' the effect of an extraneous variable or confound, to reveal the causal relationship between IV and DV without contamination by the confound">"Controlling for" a variable</abbr>. Explained [here](Also explained in https://alexholcombe.wordpress.com/2016/02/03/problems-with-controlling-for-variables-quick-notes/), in more detail than you need to know.
 <!--This was in Bruce and Alex's lectures and means a confound that you try to compensate for using statistics, to reveal the causal relationship between IV and DV without contamination by the confound. Usually happens in observational studies but can sometimes happen in experiments.
-Also explained in https://alexholcombe.wordpress.com/2016/02/03/problems-with-controlling-for-variables-quick-notes/-->
+-->
 
-* Controlled variable  
-<!--In the Evidence tutorial, we used this to mean a variable that you ensure does not differ between the two groups in a simple experiment. This is in distinction to the independent variable, which is a variable you do want to differ between the two groups-->
+* <abbr title="In a tutorial, we used this to mean a variable that you ensure does *not* differ between two groups you are comparing. This is in distinction to the independent variable, which is a variable you *do* want to differ between the two groups">Controlled variable</abbr>
+
 
 ### Other terms
-* Spurious correlation
-<!-- Correlation between X and Y that one might think is due to X causing Y, or Y causing X, but isn't -->
+* <abbr title="Correlation between X and Y that one might think is due to X causing Y, or Y causing X, but isn't.">Spurious correlation</abbr>
 * Causal model
 * The [third-cause fallacy](https://apologetics.fandom.com/wiki/Third-cause_fallacy)
 * Contingency table
