--- a/Vocab_ReadingsATHKstatsAndStudies.Rmd
+++ b/Vocab_ReadingsATHKstatsAndStudies.Rmd
@@ -97,5 +97,5 @@ http://www.statisticshowto.com/design-of-experiments/confounding-variable/
 * Residual
 * Nonlinear model
 * False positive, true positive, false negative, true negative
-* Specificity and sensitivity
+* <abbr title="Of those without what's being tested for, the proportion that correctly get a NEGATIVE test result. High specificity means low false positive rate" >Specificity</abbr> and <abbr title="How often a test correctly generates a positive result for cases that have what's being tested for (also known as the 'true positive' rate)">sensitivity</abbr>
 
