--- a/Vocab_ReadingsATHKArgumentsThinking.Rmd
+++ b/Vocab_ReadingsATHKArgumentsThinking.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Vocab, readings for Alex's arguments and fallacies lectures, and associated tutorials"
-date: "This will be updated as the lectures proceed."
+title: "Vocab, readings for: Alex's arguments, fallacies, and rhetoric lectures and associated tutorials (Weeks 9-13)"
+date: "This may be updated as the weeks proceed."
 output: html_document
 ---
 
-For the words on this page that are underlined with tiny dots, a short definition will pop up if you hover over the word with your mouse pointer. Here's an example:  <abbr title="Alex is a middle-aged man who is lecturing from weeks 7 to 13.">Alex</abbr>. To study, first ask yourself on what the word means, and then check whether you're right by hovering over the word.
+For the words on this page underlined with tiny dots, a short definition will pop up if you hover over the word with your mouse pointer. Here's an example:  <abbr title="Alex is a middle-aged man who is lecturing from weeks 7 to 13.">Alex</abbr>. To study, first ask yourself on what the word means, and then check whether you're right by hovering over the word.
 
 ## Tutorial overview
 
@@ -67,6 +67,7 @@ Philosophers typically use "strong" and "cogent" for describing *inductive* argu
 
 # Vocabulary
 
+* <abbr title="In a debate or argument, just contradicting the other's position without giving reasons">Simple contradiction</abbr>
 
 * <abbr title="Bruce:'Confounding factor is one that varies with both variables being considered and thus obscures their true relationship'. Alex: In an experiment, a confound is something that is different for the different levels of the independent variable. Because it may affect the outcome variable, we don't know whether it is the confound or the independent variable causing any difference in the outcome variable.">Confound, confounding factor, or confound variable</abbr>.
     * Something that varies with the variable whose effect one is interested in and thus obscures their true relationship
